--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 crossterm = { version = "0.27.0", features = ["event-stream"] }
 futures = "0.3.30"
 ratatui = "0.29.0"
+text-to-ascii-art = "0.1.5"
 tokio = { version = "1.35.1", features = ["full"] }
 chrono = "0.4.37"
 reqwest = { version = "0.11.16", features = ["json", "blocking"] }
