--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,8 @@ ratatui = "0.29.0"
 text-to-ascii-art = "0.1.5"
 tokio = { version = "1.35.1", features = ["full"] }
 chrono = "0.4.37"
+serde = { version = "1.0", features = ["derive"] }
 reqwest = { version = "0.11.16", features = ["json", "blocking"] }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tracing-error = "0.2.0"
+tracing = "0.1.40"
